# ta-lib-rust

./: Cargo.toml
