[package]
name = "ta-lib-wrapper"
version = "0.2.0"
authors = ["Carl Levasseur <carl.levasseur@protonmail.com>"]
description = "Rust wrapper for TA-lib"
repository = "https://github.com/CLevasseur/ta-lib-rust"
readme = "README.md"
keywords = ["ta-lib", "technical-analysis", "indicator", "trading", "financial-market"]
categories = ["api-bindings"]
license-file = "MIT"

[badges]
travis-ci = { repository = "CLevasseur/ta-lib-rust", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]

[build-dependencies]
bindgen = "0.59.1"
